--- a/_includes/head.html
+++ b/_includes/head.html
@@ -4,8 +4,9 @@
   <meta name="viewport" content="width=device-width initial-scale=1">
   <title>{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}</title>
   <meta name="description" content="{% if page.excerpt %}{{ page.excerpt | strip_html | strip_newlines | truncate: 160 }}{% else %}{{ site.description }}{% endif %}">
-  <meta name="referrer" content="always">
-  <link rel="alternate" type="application/atom+xml" title="{{ site.title }}" href="{{ "/feed.xml" | prepend: site.url }}" />
+  <meta name="referrer" content="origin">
+  <link rel="stylesheet" type="text/css" href="/css/main.css" media="all">
+  <link rel="alternate" type="application/atom+xml" title="{{ site.title }}" href="{{ "feed.xml" | prepend: site.url }}" />
   <link rel="author" href="humans.txt" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 </head>
