--- a/css/main.scss
+++ b/css/main.scss
@@ -6,5 +6,72 @@
 body {
   text-align: center;
   margin-top: 10vh;
-  font: 4vw/6vw -apple-system,BlinkMacSystemFont,"Segoe UI",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
+  font: 5vw/8vw -apple-system,BlinkMacSystemFont,"Segoe UI",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
 }
+
+a, svg {
+  transition: all .15s ease;
+}
+
+// ------------------------------  SOCIAL ICONS  -------------------------------
+$size: 15vw;
+$max-size: 6rem;
+$gun: #383940;
+$darken: 10%;
+$socials: (
+  github: $gun,
+  instagram: $gun,
+  rss: #D95B29,
+  tumblr: #36465D,
+  twitter: #55acee,
+);
+
+// Sizing
+.social {
+  a {
+    background-color: transparent !important;
+    margin: 0;
+    height: $size;
+    width: $size;
+    max-width: $max-size;
+    max-height: $max-size;
+    display: inline-block;
+    &:hover {
+      cursor: pointer;
+    }
+    svg {
+      height: 100%;
+      width: 100%;
+    }
+  }
+}
+
+// Coloring
+@each $social, $color in $socials {
+  @if $social == 'generic' {
+    .generic {
+      svg {
+        fill: $color;
+      }
+      &:focus,
+      &:hover {
+        svg {
+          fill: darken($color,$darken);
+        }
+      }
+    }
+  }
+  @else {
+    .#{$social} {
+        svg {
+          fill: $color;
+        }
+        &:focus,
+        &:hover {
+          svg {
+            fill: darken($color,$darken);
+          }
+        }
+      }
+    }
+  }
