make the icons bigger!
and shrink the sass a bit

--- a/css/main.scss
+++ b/css/main.scss
@@ -48,30 +48,16 @@ $socials: (
 
 // Coloring
 @each $social, $color in $socials {
-  @if $social == 'generic' {
-    .generic {
+  .#{$social} {
+    svg {
+      fill: $color;
+    }
+    &:focus,
+    &:hover {
       svg {
-        fill: $color;
-      }
-      &:focus,
-      &:hover {
-        svg {
-          fill: darken($color,$darken);
-        }
+        fill: darken($color,$darken);
+        transform: scale(1.15);
       }
     }
   }
-  @else {
-    .#{$social} {
-        svg {
-          fill: $color;
-        }
-        &:focus,
-        &:hover {
-          svg {
-            fill: darken($color,$darken);
-          }
-        }
-      }
-    }
-  }
+}
