--- a/css/main.scss
+++ b/css/main.scss
@@ -5,13 +5,19 @@
 
 body {
   text-align: center;
-  margin-top: 10vh;
+  margin-top: 5vh;
   font: 5vw/8vw -apple-system,BlinkMacSystemFont,"Segoe UI",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
 }
 
-a, svg {
+.social svg {
   transition: all .15s ease;
 }
+
+.logo {
+  width:40vw;
+}
+
+
 
 // ------------------------------  SOCIAL ICONS  -------------------------------
 $size: 15vw;
