--- a/_includes/head.html
+++ b/_includes/head.html
@@ -2,15 +2,65 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width initial-scale=1">
-  <title>{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}</title>
-  <meta name="description" content="{% if page.excerpt %}{{ page.excerpt | strip_html | strip_newlines | truncate: 160 }}{% else %}{{ site.description }}{% endif %}">
-  <meta name="referrer" content="origin">
+  <title>{% if page.title %}{{ page.title }} > {% endif %}{{ site.title }}</title>
+  <meta name="description" content="{% if page.intro %}{{ page.intro | strip_html | strip_newlines | truncate: 155 }}{% else %}{{ site.description }}{% endif %}">
+  <meta name="referrer" content="unsafe-url">
   <link rel="stylesheet" type="text/css" href="/css/main.css" media="all">
   <link rel="alternate" type="application/atom+xml" title="{{ site.title }}" href="{{ "feed.xml" | prepend: site.url }}" />
   <link rel="author" href="humans.txt" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-   <!-- RealFaviconGenerator -->
+{% assign full_url = site.baseurl | prepend: site.url %}
+
+{% capture page_title %}
+{% if page.title %}
+{{ page.title | append: " > " | append: site.title }}
+{% else %}
+{{ site.title }}
+{% endif %}
+{% endcapture %}
+{% assign page_title = page_title | strip_newlines | join " " %}
+
+{% capture page_image %}
+{% if page.img %}
+{{ page.img | prepend: page.url | prepend: "images" | prepend: full_url }}
+{% else %}
+{{ site.image | prepend: full_url }}
+{% endif %}
+{% endcapture %}
+{% assign page_image = page_image | strip_newlines | join " " %}
+
+{% capture page_url %}
+{{ page.url | replace:'/','' | prepend: full_url }}
+{% endcapture %}
+{% assign page_url = page_url | strip_newlines | join " " %}
+
+{% capture page_description %}
+{% if page.intro %}
+{{ page.intro }}
+{% else %}
+{{ site.description }}
+{% endif %}
+{% endcapture %}
+{% assign page_description = page_description | strip_newlines | truncate: 200 %}
+
+  <!-- Social Meta Madness -->
+  <meta name="twitter:card" content="summary">
+  <meta name="twitter:site" content="{{ site.twitter_username }}">
+  <meta name="twitter:url" property="og:url" content="{{ page_url }}">
+  <meta name="twitter:title" property="og:title" itemprop="name" content="{{ page_title }}">
+  <meta name="twitter:description" property="og:description" itemprop="description" content="{{ page_description }}">
+  <meta name="twitter:image:src" property="og:image" itemprop="image" content="{{ page_image }}">
+  <meta name="twitter:creator" content="{{ site.twitter_username }}" />
+  <!-- <meta property="article:author" content="https://www.facebook.com/{{ site.facebook_username }}"> -->
+  <!-- <meta property="article:publisher" content="https://www.facebook.com/{{ site.facebook_username }}"> -->
+  <meta property="og:type" content="article" />
+  <meta property="og:site_name" content="{{ site.title }}" />
+  <meta property="og:locale" content="en_US" />
+  <!-- <meta property="fb:app_id" content="{{ site.facebook_app_id }}" /> -->
+  <!-- <meta property="fb:admins" content="{{ site.facebook_admins }}" /> -->
+
+  <!-- RealFaviconGenerator -->
   <link rel="apple-touch-icon" sizes="180x180" href="/images/favicons/apple-touch-icon.png">
   <link rel="icon" type="image/png" href="/images/favicons/favicon-32x32.png" sizes="32x32">
   <link rel="icon" type="image/png" href="/images/favicons/favicon-16x16.png" sizes="16x16">
