--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,19 +1,37 @@
 <!DOCTYPE html>
 <html>
-  {% include head.html %}
-  <body>
-    {{ content }}
+{% include head.html %}
+<body class="{{ layout.bodyclass }}">
+  <div class="container">
+    {% include header.html %}
+
+    <section>
+      {{ content }}
+    </section>
+
+    {% include footer.html %}
+  </div>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/anchor-js/3.2.2/anchor.min.js"></script>
+
+
+
+<script>
+anchors.options = {
+  placement: 'left',
+  icon: '🍩'
+};
+  anchors.add('body.post h4');
+
+</script>
 
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
   m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
   })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
-
   ga('create', 'UA-85418593-1', 'auto');
   ga('send', 'pageview');
-
 </script>
-    
-  </body>
+
+</body>
 </html>
