--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,5 +1,5 @@
 <footer>
-  <small>{{ site.description }}</small>
+  <small class="slogan">{{ site.description }}</small>
   <p class="social">
     <a class="skateorbike" href="/" title="Home">
   <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 628 701">
