--- a/css/main.scss
+++ b/css/main.scss
@@ -38,8 +38,18 @@ header, footer {
   text-align: center;
 }
 
+header .slogan {
+  margin-top: 32px;
+  font-size: 1.2rem;
+  @media screen and (max-width: 415px) {
+    margin-top: 12px;
+    font-size: .7rem;
+  }
+}
+
 .logo {
-  width: 180px;
+  width: 23vw;
+  max-width: 180px;
   transition: all .08s ease;
   &:hover {
     transform: scale(1.15);
