facesters logo in footer

--- a/css/main.scss
+++ b/css/main.scss
@@ -269,6 +269,7 @@ $socials: (
   info: $gun,
   instagram: $gun,
   twitter: $gun,
+  facebook: $gun,
   tumblr: $gun,
   rss: $gun,
   github: $gun,
