--- a/css/main.scss
+++ b/css/main.scss
@@ -60,6 +60,66 @@ footer {
   margin-top: 4rem;
 }
 
+img {
+  width: 100%;
+}
+
+img + em {
+  display: block;
+  text-align: center;
+  font-size: 80%;
+  font-weight: 200;
+  font-style: normal;
+}
+
+p.wide {
+  max-width: 1080px;
+  img {
+    width: 100%;
+  }
+}
+
+hr {
+  width: 43%;
+  margin-top: 100px;
+  border: 0;
+  height: 1px;
+  background-image: linear-gradient(to right, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.75), rgba(0, 0, 0, 0));
+  text-align: center;
+}
+
+hr:after {
+  content: "🚴";
+  display: inline-block;
+  position: relative;
+  top: -38px;
+  font-size: 36px;
+  @media screen and (max-width: 415px) {
+    top: -63px;
+  }
+}
+
+
+// ------------------------------  IMAGE GALLERY  ------------------------------
+
+.gallery {
+  width: 100%;
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.gallery img {
+  width: auto;
+  height: 320px;
+  @media screen and (max-width: 400px) {
+    width: 40vw;
+    height: auto;
+  }
+  padding: 5px;
+  flex-grow: 1;
+  object-fit: cover;
+}
+
 
 // -------------------------------  TYPOGRAPHY  --------------------------------
 
@@ -168,47 +228,13 @@ li {
   }
 }
 
-
-img {
-  width: 100%;
-}
-img + em {
-  display: block;
-  text-align: center;
-  font-size: 80%;
-  font-weight: 200;
-  font-style: normal;
-}
-p.wide {
-  max-width: 1080px;
-  img {
-    width: 100%;
-  }
-}
-
-
 p.intro {
   font-weight: 500;
   color: #101;
 }
 
 
-hr {
-  width: 43%;
-  margin-top: 100px;
-  border: 0;
-  height: 1px;
-  background-image: linear-gradient(to right, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.75), rgba(0, 0, 0, 0));
-  text-align: center;
-}
-
-hr:after {
-  content: "🚴";
-  display: inline-block;
-  position: relative;
-  top: -38px;
-  font-size: 36px;
-}
+// ---------------------------------  LINKAGE  ---------------------------------
 
 section {
 a:link {
@@ -225,17 +251,15 @@ a:hover {
   }
 }
 
+
+// ---------------------------------  ANCHORS  ---------------------------------
+
 .anchorjs-link {
   box-shadow: none !important;
 }
 *:hover > .anchorjs-link {
   margin-left: -1.25em !important;
   margin-top: 2px;
-}
-
-
-#disqus_thread {
-  padding-top: 2rem;
 }
 
 
@@ -318,26 +342,4 @@ $socials: (
       }
     }
   }
-}
-
-
-// ------------------------------  IMAGE GALLERY  ------------------------------
-
-.gallery {
-  width: 100%;
-  display: flex;
-  flex-wrap: wrap;
-  // justify-content: center;
-}
-
-.gallery img {
-  width: auto;
-  height: 320px;
-  @media screen and (max-width: 400px) {
-    width: 40vw;
-    height: auto;
-  }
-  padding: 5px;
-  flex-grow: 1;
-  object-fit: cover;
 }
