shoes, cassette, lance board, and img description css tweak

--- a/css/main.scss
+++ b/css/main.scss
@@ -67,9 +67,10 @@ img {
 img + em {
   display: block;
   text-align: center;
-  font-size: 80%;
+  font-size: 72%;
   font-weight: 200;
   font-style: normal;
+  color: darkslategray;
 }
 
 p.wide {
