--- a/_includes/head.html
+++ b/_includes/head.html
@@ -2,7 +2,7 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width initial-scale=1">
-  <title>{% if page.title %}{{ page.title }} > {% endif %}{{ site.title }}</title>
+  <title>{% if page.title %}{{ page.title }} ⦚ {% endif %}{{ site.title }}</title>
   <meta name="description" content="{% if page.intro %}{{ page.intro | strip_html | strip_newlines }}{% else %}{{ site.description }}{% endif %}">
   <meta name="referrer" content="always">
   <link rel="stylesheet" type="text/css" href="/css/main.css" media="all">
