--- a/_includes/head.html
+++ b/_includes/head.html
@@ -53,12 +53,12 @@
   <meta name="twitter:image" content="{{ page_image }}">
 
   <meta property="og:title" content="{{ page_title }}" />
-  <meta property="og:type" content="article" />
   <meta property="og:url" content="{{ page_url }}" />
   <meta property="og:image" content="{{ page_image }}" />
   <meta property="og:description" content="{{ page_description }}" />
+  <meta property="fb:app_id" content="221690254955033" />
+  <meta property="og:type" content="article" />
   <meta property="og:site_name" content="{{ site.title }}" />
-  <meta property="fb:page_id" content="221690254955033" />
 
   <!-- RealFaviconGenerator -->
   <link rel="apple-touch-icon" sizes="180x180" href="/images/favicons/apple-touch-icon.png">
