> now - in header

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -14,7 +14,7 @@
 
 {% capture page_title %}
 {% if page.title %}
-{{ page.title | append: " > " | append: site.title }}
+{{ page.title | append: " - " | append: site.title }}
 {% else %}
 {{ site.title }}
 {% endif %}
