--- a/_includes/head.html
+++ b/_includes/head.html
@@ -44,10 +44,10 @@
 {% endcapture %}
 {% assign page_description = page_description | strip_newlines %}
 
-    <!-- Social Meta Madness -->
+  <!-- Social Meta Madness -->
   <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:site" content="{{ site.twitter_username }}">
-  <meta name="twitter:creator" content="@huphtur">
+  <meta name="twitter:site" content="@{{ site.twitter }}">
+  <meta name="twitter:creator" content="@{{ site.creator }}">
   <meta name="twitter:title" content="{{ page_title }}">
   <meta name="twitter:description" content="{{ page_description }}">
   <meta name="twitter:image" content="{{ page_image }}">
@@ -56,7 +56,6 @@
   <meta property="og:url" content="{{ page_url }}" />
   <meta property="og:image" content="{{ page_image }}" />
   <meta property="og:description" content="{{ page_description }}" />
-  <meta property="fb:app_id" content="221690254955033" />
   <meta property="og:site_name" content="{{ site.title }}" />
 
   <!-- RealFaviconGenerator -->
